--- a/accounts/templates/accounts/user_login.html
+++ b/accounts/templates/accounts/user_login.html
@@ -84,7 +84,7 @@
                   <!-- Switch to Register Form Link -->
                   <div class="switch-form">
                     <span>Don't have an account?</span>
-                    <button type="button" class="switch-btn" data-target="register">Create account</button>
+                    <a type="button" class="switch-btn" href="{% url "register" %}">Create account</a>
                   </div>
                 </form>
               </div>
