--- a/templates/new_nav.html
+++ b/templates/new_nav.html
@@ -102,7 +102,7 @@
                 <p class="mb-0">Access account &amp; manage orders</p>
               </div>
               <div class="dropdown-body">
-                <a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard_redirect' %}">
+                <a class="dropdown-item d-flex align-items-center" href="{% url 'profile' %}">
                   <i class="bi bi-person-circle me-2"></i>
                   <span>My Profile</span>
                 </a>
@@ -150,7 +150,7 @@
     <div class="container-fluid container-xl position-relative">
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="{% url 'products_list' %}" class="active">Home</a></li>
+          <li><a href="/" class="active">Home</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
           {% comment %} <li><a href="{% url 'category' %}">Category</a></li> {% endcomment %}
           <li><a href="{% url 'product_details' %}">Product Details</a></li>
