--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -13,7 +13,7 @@
           <h1 class="hero-title">Discover Amazing Products</h1>
           <p class="hero-description">Explore our curated collection of premium items designed to enhance your lifestyle. From fashion to tech, find everything you need with exclusive deals and fast shipping.</p>
           <div class="hero-actions" data-aos="fade-up" data-aos-delay="200">
-            <a href="#products" class="btn-primary">Shop Now</a>
+            <a href="products_list" class="btn-primary">Shop Now</a>
             <a href="{% url "category_list" %}" class="btn-secondary">Browse Categories</a>
           </div>
           <div class="features-list" data-aos="fade-up" data-aos-delay="300">
@@ -61,7 +61,7 @@
 
         <div class="floating-elements">
           <div class="floating-icon cart" data-aos="fade-up" data-aos-delay="600">
-            <i class="bi bi-cart3"></i>
+            <i class="bi bi-cart{{cart_item_count}}"></i>
             <span class="notification-dot">3</span>
           </div>
           <div class="floating-icon wishlist" data-aos="fade-up" data-aos-delay="700">
