--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -61,8 +61,8 @@
 
         <div class="floating-elements">
           <div class="floating-icon cart" data-aos="fade-up" data-aos-delay="600">
-            <i class="bi bi-cart{{cart_item_count}}"></i>
-            <span class="notification-dot">3</span>
+            <i class="bi bi-cart3"></i>
+            <span class="notification-dot">{{cart_item_count}}</span>
           </div>
           <div class="floating-icon wishlist" data-aos="fade-up" data-aos-delay="700">
             <i class="bi bi-heart"></i>
