--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -177,7 +177,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="product-item">
               <div class="product-image">
-                <div class="product-badge trending-badge">Trending</div>
+                <div class="product-badge trending-badge">{{product.name}}</div>
                 <img src="{% static 'assets/img/product/product-10.webp' %}" alt="Product Image" class="img-fluid" loading="lazy">
                 <div class="product-actions">
                   <button class="action-btn wishlist-btn active">
@@ -190,11 +190,11 @@
                     <i class="bi bi-zoom-in"></i>
                   </button>
                 </div>
-                <button class="cart-btn">Add to Cart</button>
+                <a href="{% url "add_to_cart" product.id %}" class="cart-btn">Add to Cart</a>
               </div>
               <div class="product-info">
-                <div class="product-category">Designer Series</div>
-                <h4 class="product-name"><a href="product-details.html">Ut enim ad minim veniam quis</a></h4>
+                <div class="product-category">{{product.category}}</div>
+                <h4 class="product-name"><a href="product-details.html">{{product.description}}</a></h4>
                 <div class="product-rating">
                   <div class="stars">
                     <i class="bi bi-star-fill"></i>
