--- a/templates/new_nav.html
+++ b/templates/new_nav.html
@@ -8,7 +8,7 @@
           <div class="top-bar-item">
             <i class="bi bi-telephone-fill me-2"></i>
             <span>Need help? Call us: </span>
-            <a href="tel:+1234567890">+1 (234) 567-890</a>
+            <a href="tel:+1234567890">(+254) 706 253 808</a>
           </div>
         </div>
 
@@ -114,7 +114,7 @@
                   <i class="bi bi-heart me-2"></i>
                   <span>My Wishlist</span>
                 </a>
-                <a class="dropdown-item d-flex align-items-center" href="{% url 'products_list' %}">
+                <a class="dropdown-item d-flex align-items-center" href="{% url 'profile' %}">
                   <i class="bi bi-gear me-2"></i>
                   <span>Settings</span>
                 </a>
