--- a/templates/main.html
+++ b/templates/main.html
@@ -193,7 +193,7 @@
               <a href="index.html" class="logo">
                 <span class="sitename">SwiftShop</span>
               </a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula, facilisis magna ut, consectetur lorem. Proin eget tortor risus.</p>
+              <p>Discover SwiftShop, where convenience meets style, bringing you quality products delivered swiftly to your doorstep.</p>
 
               <div class="social-links mt-4">
                 <h5>Connect With Us</h5>
