Normalize line endings

--- a/accounts/templates/accounts/user_login.html
+++ b/accounts/templates/accounts/user_login.html
@@ -76,10 +76,10 @@
                   </div>
 
                   <!-- Social Login Button (Optional) -->
-                  <button type="button" class="auth-btn social-btn">
+                  <a href="{% provider_login_url 'google' %}" class="auth-btn social-btn">
                     <i class="bi bi-google"></i>
                     Continue with Google
-                  </button>
+                  </a>
 
                   <!-- Switch to Register Form Link -->
                   <div class="switch-form">
