--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block title %}User Login{% endblock %}
-
+{% load socialaccount %}
 {% block content %}
 <main class="main">
 
